@startuml
interface IFile {
    -String _sourceDirectory
    -String _targetDirectory
    +void Copy()
}
IFile <|.. NormalFile
class NormalFile {
    -String _sourceDirectory
    -String _targetDirectory
    +void Copy()
}

IFile <|.. CryptedFile
class CryptedFile {
    -String _sourceDirectory
    -String _targetDirectory
    +void Copy()
}

class BackupFolder {
    -String _sourceDirectory
    -String _targetDirectory
    +void MirrorFolder()
}

class BackupJob {
    +int Id
    +string Name
    +string SourceDirectory
    +string TargetDirectory
    +BackupType Type
    +IFile[] files;
    +int CurrentFile;
    +int CurrentProgress
    
    +void StartBackup()
}

interface IBackupTypeSelector {
    -string sourceDirectory
    -string targetDirectory
    +IFile[] getFilesToBackup()
}

class BackupTypeComplete {
    -string sourceDirectory
    -string targetDirectory
    +IFile[] getFilesToBackup()
}

class BackupTypeDifferential {
    -string sourceDirectory
    -string targetDirectory
    +IFile[] getFilesToBackup()
}

enum BackupType {
    Complete
    Differential
}

IBackupTypeSelector <|.. BackupTypeComplete
IBackupTypeSelector <|.. BackupTypeDifferential

BackupJob --> BackupFolder
BackupJob --> IBackupTypeSelector
BackupJob --> IFile
BackupJob --> BackupType
@enduml
